tests/fail/ch_stable/missing_type.rs
fn main() {
    sscanf::scanf!("hi", "asdf{}{}asdf{:bob}", usize);
    sscanf::scanf!("hi", "asdf{}{usize}as{}df{i32}", usize);
}
